--- a/sdbuild/ubuntu/jammy/arm/multistrap.config
+++ b/sdbuild/ubuntu/jammy/arm/multistrap.config
@@ -1,13 +1,13 @@
 [General]
-debootstrap=Focal 
-aptsources=Focal 
+debootstrap=Jammy 
+aptsources=Jammy 
 arch=armhf
 allowrecommends=true
 addimportant=true
 
-[Focal]
+[Jammy]
 source=http://ports.ubuntu.com/ubuntu-ports
-suite=focal universe
+suite=jammy universe
 keyring=ubuntu-keyring
 packages=python3-networkx python3-lxml python3-numexpr
 packages=python3-transitions python3-sympy python3-cffi
