--- a/sdbuild/ubuntu/jammy/aarch64/multistrap.config
+++ b/sdbuild/ubuntu/jammy/aarch64/multistrap.config
@@ -1,13 +1,13 @@
 [General]
-debootstrap=Focal 
-aptsources=Focal 
+debootstrap=Jammy 
+aptsources=Jammy
 arch=arm64
 allowrecommends=true
 addimportant=true
 
-[Focal]
+[Jammy]
 source=http://ports.ubuntu.com/ubuntu-ports
-suite=focal universe
+suite=jammy universe
 keyring=ubuntu-keyring
 packages=python3-networkx python3-lxml python3-numexpr
 packages=python3-transitions python3-sympy python3-cffi
@@ -78,12 +78,12 @@ packages=libgraphite2-3 libgs9 libgs9-common libgsm1 libgssapi-krb5-2
 packages=libgssapi3-heimdal libgtk2.0-0 libgtk2.0-bin libgtk2.0-common
 packages=libgtk2.0-dev libharfbuzz-dev libharfbuzz-gobject0 libharfbuzz-icu0
 packages=libharfbuzz0b libhcrypto4-heimdal libhdb9-heimdal
-packages=libheimbase1-heimdal libheimntlm0-heimdal libhogweed5
+packages=libheimbase1-heimdal libheimntlm0-heimdal libhogweed6
 packages=libhtml-form-perl libhtml-format-perl libhtml-parser-perl
 packages=libhtml-tagset-perl libhtml-tree-perl libhttp-cookies-perl
 packages=libhttp-daemon-perl libhttp-date-perl libhttp-message-perl
 packages=libhttp-negotiate-perl libhx509-5-heimdal libi2c-dev libice-dev
-packages=libice6 libicu-dev libidn11 libijs-0.35 libilmbase-dev libilmbase24
+packages=libice6 libicu-dev libidn12 libijs-0.35 libilmbase-dev libilmbase24
 packages=libimport-into-perl libindirect-perl libintl-perl libio-html-perl
 packages=libio-socket-inet6-perl libio-socket-ssl-perl libio-stringy-perl
 packages=libipc-system-simple-perl libjbig-dev libjbig0 libjbig2dec0
@@ -91,7 +91,7 @@ packages=libjpeg-dev libjpeg-turbo8 libjpeg-turbo8-dev libjpeg8 libjpeg8-dev
 packages=libjs-inherits libjs-jquery libjs-underscore
 packages=libk5crypto3 libkdc2-heimdal libkeyutils1 libkmod2 libkpathsea6
 packages=libkrb5-26-heimdal libkrb5-3 libkrb5support0 liblapack-dev liblapack3
-packages=liblcms2-2 liblcms2-dev libldap-2.4-2 libldb2
+packages=liblcms2-2 liblcms2-dev libldap-2.5-0 libldb2
 packages=liblexical-sealrequirehints-perl liblist-moreutils-perl
 packages=liblocale-gettext-perl liblockfile-bin liblockfile1
 packages=liblog-message-perl liblog-message-simple-perl libltdl-dev libltdl7
@@ -100,11 +100,11 @@ packages=liblzma-dev liblzma5 liblzo2-2 libmagic1 libmail-sendmail-perl
 packages=libmailtools-perl libmodplug1 libmodule-build-perl
 packages=libmodule-implementation-perl libmodule-pluggable-perl
 packages=libmodule-runtime-perl libmodule-signature-perl libmoo-perl
-packages=libmoox-handlesvia-perl libmount1 libmp3lame0 libmpc3 libmpdec2
+packages=libmoox-handlesvia-perl libmount1 libmp3lame0 libmpc3 libmpdec3
 packages=libmro-compat-perl libmultidimensional-perl
 packages=libnamespace-autoclean-perl libnamespace-clean-perl libncurses5
 packages=libncurses5-dev libncursesw5 libncursesw5-dev libnet-dbus-perl
-packages=libnet-http-perl libnet-smtp-ssl-perl libnet-ssleay-perl libnettle7
+packages=libnet-http-perl libnet-smtp-ssl-perl libnet-ssleay-perl libnettle8
 packages=libnl-3-200 libnl-genl-3-200 libogg0
 packages=libopenexr-dev libopenexr24 libopts25 libopus0 liborc-0.4-0
 packages=libp11-kit0 libpackage-constants-perl libpackage-stash-perl
@@ -122,11 +122,11 @@ packages=libpython2-stdlib libpython2.7 libpython2.7-dev libpython2.7-minimal
 packages=libpython2.7-stdlib libpython3-dev libpython3-stdlib libraw1394-11
 packages=libraw1394-dev libraw1394-tools libroken18-heimdal librole-tiny-perl
 packages=librtmp1 libsasl2-2 libsasl2-modules libsasl2-modules-db libseccomp2
-packages=libselinux1 libsemanage-common libsemanage1 libsepol1 libshine3
+packages=libselinux1 libsemanage-common libsemanage2 libsepol2 libshine3
 packages=libsigc++-2.0-0v5 libsigc++-2.0-dev libsigsegv2 libslang2 libsm-dev
 packages=libsm6 libsmartcols1 libsocket6-perl libsoftware-license-perl
 packages=libsoxr0 libspeex1 libsqlite3-0 libsqlite3-dev libss2 libssh-gcrypt-4
-packages=libssl-dev libssl-doc libssl1.1 libstdc++6
+packages=libssl-dev libssl-doc libssl3 libstdc++6
 packages=libstrictures-perl libsub-exporter-perl
 packages=libsub-exporter-progressive-perl libsub-identify-perl
 packages=libsub-install-perl libsub-name-perl libswresample-dev libswscale-dev
@@ -167,7 +167,7 @@ packages=make makedev man-db manpages manpages-dev mawk mesa-common-dev
 packages=mime-support kmod mount nano ncdu
 packages=ncurses-base ncurses-bin ncurses-term net-tools netbase ntpdate
 packages=openssh-client openssh-server openssh-sftp-server openssl
-packages=pandoc pandoc-data passwd patch perl perl-base perl-modules-5.30
+packages=pandoc pandoc-data passwd patch perl perl-base perl-modules-5.34
 packages=pkg-config po-debconf policykit-1 poppler-data procps psmisc python
 packages=python-apt-common python-crypto python-dev python-dnspython python-gi
 packages=python-gi-dev python3-ldb python3-minimal
@@ -185,8 +185,7 @@ packages=tcl-dev tcl8.6 tcl8.6-dev tcpd tdb-tools tex-common
 packages=texinfo tk tk-dev tk8.6 tk8.6-blt2.5 tk8.6-dev tree
 packages=tzdata ubuntu-keyring ucf udev unattended-upgrades unzip update-inetd
 packages=usbutils util-linux vim vim-common vim-runtime wget wpasupplicant
-packages=x11-common x11proto-composite-dev x11proto-core-dev
-packages=x11proto-damage-dev x11proto-fixes-dev x11proto-gl-dev
+packages=x11-common x11proto-core-dev x11proto-gl-dev
 packages=x11proto-input-dev x11proto-kb-dev x11proto-randr-dev
 packages=x11proto-render-dev x11proto-scrnsaver-dev x11proto-xext-dev
 packages=x11proto-xinerama-dev xauth xbitmaps xdg-user-dirs xdg-utils
