python -> python-is-python3

--- a/sdbuild/ubuntu/jammy/aarch64/multistrap.config
+++ b/sdbuild/ubuntu/jammy/aarch64/multistrap.config
@@ -168,8 +168,8 @@ packages=mime-support kmod mount nano ncdu
 packages=ncurses-base ncurses-bin ncurses-term net-tools netbase ntpdate
 packages=openssh-client openssh-server openssh-sftp-server openssl
 packages=pandoc pandoc-data passwd patch perl perl-base perl-modules-5.34
-packages=pkg-config po-debconf policykit-1 poppler-data procps psmisc python
-packages=python-apt-common python-crypto python-dev python-dnspython python-gi
+packages=pkg-config po-debconf policykit-1 poppler-data procps psmisc python-is-python3
+packages=python-apt-common python-crypto python-dev-is-python3 python-dnspython python-gi
 packages=python-gi-dev python3-ldb python3-minimal
 packages=python-pkg-resources python3-samba python-setuptools
 packages=python3-talloc python3-tdb python3-tk python2.7 python2.7-dev
