--- a/sdbuild/ubuntu/jammy/aarch64/multistrap.config
+++ b/sdbuild/ubuntu/jammy/aarch64/multistrap.config
@@ -52,10 +52,10 @@ packages=libcairo-script-interpreter2 libcairo2 libcairo2-dev libcap-ng0
 packages=libcap2 libcap2-bin libcc1-0 libcgi-fast-perl libcgi-pm-perl
 packages=libclass-c3-perl libclass-c3-xs-perl libclass-method-modifiers-perl
 packages=libclass-xsaccessor-perl libcomerr2 libcpan-changes-perl
-packages=libcpan-meta-perl libcpufreq0 libcroco3 libcups2 libcupsfilters1
+packages=libcpan-meta-perl libcpufreq0 libcups2 libcupsfilters1
 packages=libcupsimage2 libcurl4 libcurl3-gnutls libdata-optlist-perl
 packages=libdata-perl-perl libdata-section-perl libdatrie1 libdb5.3
-packages=libdbus-1-3 libdbus-glib-1-2 libdc1394-22 libdc1394-22-dev
+packages=libdbus-1-3 libdbus-glib-1-2 libdc1394-25 libdc1394-dev
 packages=libdebconfclient0 libdevel-caller-perl
 packages=libdevel-globaldestruction-perl libdevel-lexalias-perl
 packages=libdevmapper1.02.1 libdpkg-perl libdrm-amdgpu1 libdrm-dev libdrm2
@@ -70,7 +70,7 @@ packages=libfreetype6 libfreetype6-dev libftdi-dev libftdi1 libgcc-9-dev
 packages=libgcc1 libgcrypt20 libgd3 libgdbm-dev libgdk-pixbuf2.0-0
 packages=libgdk-pixbuf2.0-common libgdk-pixbuf2.0-dev
 packages=libgetopt-long-descriptive-perl libgettextpo-dev libgettextpo0
-packages=libgfortran-9-dev libgfortran4 libgirepository-1.0-1 libglapi-mesa
+packages=libgfortran-10-dev libgfortran5 libgirepository-1.0-1 libglapi-mesa
 packages=libglib2.0-0 libglib2.0-bin libglib2.0-data libglib2.0-dev
 packages=libglibmm-2.4-1v5 libglibmm-2.4-dev libgme0 libgmp-dev libgmp10
 packages=libgmpxx4ldbl libgnutls-openssl27 libgomp1 libgpg-error0 libgpm2
@@ -83,7 +83,7 @@ packages=libhtml-form-perl libhtml-format-perl libhtml-parser-perl
 packages=libhtml-tagset-perl libhtml-tree-perl libhttp-cookies-perl
 packages=libhttp-daemon-perl libhttp-date-perl libhttp-message-perl
 packages=libhttp-negotiate-perl libhx509-5-heimdal libi2c-dev libice-dev
-packages=libice6 libicu-dev libidn12 libijs-0.35 libilmbase-dev libilmbase24
+packages=libice6 libicu-dev libidn12 libijs-0.35 libilmbase-dev libilmbase25
 packages=libimport-into-perl libindirect-perl libintl-perl libio-html-perl
 packages=libio-socket-inet6-perl libio-socket-ssl-perl libio-stringy-perl
 packages=libipc-system-simple-perl libjbig-dev libjbig0 libjbig2dec0
@@ -106,7 +106,7 @@ packages=libnamespace-autoclean-perl libnamespace-clean-perl libncurses5
 packages=libncurses5-dev libncursesw5 libncursesw5-dev libnet-dbus-perl
 packages=libnet-http-perl libnet-smtp-ssl-perl libnet-ssleay-perl libnettle8
 packages=libnl-3-200 libnl-genl-3-200 libogg0
-packages=libopenexr-dev libopenexr24 libopts25 libopus0 liborc-0.4-0
+packages=libopenexr-dev libopenexr25 libopts25 libopus0 liborc-0.4-0
 packages=libp11-kit0 libpackage-constants-perl libpackage-stash-perl
 packages=libpackage-stash-xs-perl libpadwalker-perl libpam-modules
 packages=libpam-modules-bin libpam-runtime libpam-systemd libpam0g
@@ -136,7 +136,7 @@ packages=libtext-iconv-perl libtext-soundex-perl libtext-template-perl
 packages=libtext-unidecode-perl libthai-data libthai0 libtheora0
 packages=libtie-ixhash-perl libtiff5 libtiff5-dev libtiffxx5 libtimedate-perl
 packages=libtinfo-dev libtinfo5 libtk8.6 libtool libtry-tiny-perl
-packages=libtwolame0 libtype-tiny-perl libtype-tiny-xs-perl libubsan0 libudev1
+packages=libtwolame0 libtype-tiny-perl libtype-tiny-xs-perl libubsan1 libudev1
 packages=libunicode-utf8-perl liburi-perl libusb-0.1-4 libusb-1.0-0
 packages=libusb-1.0-0-dev libusb-1.0-doc libusb-dev libustr-1.0-1 libutempter0
 packages=libuuid1 libv4l-0 libv4lconvert0 libvariable-magic-perl libvorbis0a
