--- a/sdbuild/ubuntu/jammy/aarch64/multistrap.config
+++ b/sdbuild/ubuntu/jammy/aarch64/multistrap.config
@@ -160,7 +160,7 @@ packages=libxmu-headers libxmu6 libxmuu1 libxpm4 libxrandr-dev libxrandr2
 packages=libxrender-dev libxrender1 libxshmfence-dev libxshmfence1
 packages=libxslt1-dev libxslt1.1 libxss-dev libxss1 libxt-dev libxt6 libxtst6
 packages=libxv1 libxvidcore4 libxxf86dga1 libxxf86vm1 libyaml-0-2 
-packages=libyaml-tiny-perl libzip-dev libzip5 libzvbi-common libzvbi0
+packages=libyaml-tiny-perl libzip-dev libzip libzvbi-common libzvbi0
 packages=libzzip-0-13 libzzip-dev linux-firmware linux-libc-dev lmodern
 packages=locales lockfile-progs login logrotate lsb-base lsb-release lsof m4
 packages=make makedev man-db manpages manpages-dev mawk mesa-common-dev
