packages don't exist in 2022.04

--- a/sdbuild/ubuntu/jammy/aarch64/multistrap.config
+++ b/sdbuild/ubuntu/jammy/aarch64/multistrap.config
@@ -14,7 +14,7 @@ packages=python3-transitions python3-sympy python3-cffi
 packages=python3-sqlalchemy python3-pytest
 packages=python3-pytest-sourceorder python3-uvloop
 packages=python3-retrying openjdk-8-jdk python3-scipy
-packages=python3-pil phantomjs python3-matplotlib python3-venv
+packages=python3-pil python3-matplotlib python3-venv
 packages=python3-pygraphviz python3-setuptools python3-pip
 packages=libopencv-dev python3-opencv
 packages=2ping adduser alex apt apt-utils attr autoconf autoconf-archive
@@ -160,7 +160,7 @@ packages=libxmu-headers libxmu6 libxmuu1 libxpm4 libxrandr-dev libxrandr2
 packages=libxrender-dev libxrender1 libxshmfence-dev libxshmfence1
 packages=libxslt1-dev libxslt1.1 libxss-dev libxss1 libxt-dev libxt6 libxtst6
 packages=libxv1 libxvidcore4 libxxf86dga1 libxxf86vm1 libyaml-0-2 
-packages=libyaml-tiny-perl libzip-dev libzip libzvbi-common libzvbi0
+packages=libyaml-tiny-perl libzip-dev libzvbi-common libzvbi0
 packages=libzzip-0-13 libzzip-dev linux-firmware linux-libc-dev lmodern
 packages=locales lockfile-progs login logrotate lsb-base lsb-release lsof m4
 packages=make makedev man-db manpages manpages-dev mawk mesa-common-dev
@@ -169,7 +169,7 @@ packages=ncurses-base ncurses-bin ncurses-term net-tools netbase ntpdate
 packages=openssh-client openssh-server openssh-sftp-server openssl
 packages=pandoc pandoc-data passwd patch perl perl-base perl-modules-5.34
 packages=pkg-config po-debconf policykit-1 poppler-data procps psmisc python-is-python3
-packages=python-apt-common python-crypto python-dev-is-python3 python-dnspython python-gi
+packages=python-apt-common python-dev-is-python3 
 packages=python-gi-dev python3-ldb python3-minimal
 packages=python-pkg-resources python3-samba python-setuptools
 packages=python3-talloc python3-tdb python3-tk python2.7 python2.7-dev
