--- a/sdbuild/boot/meta-pynq/conf/layer.conf
+++ b/sdbuild/boot/meta-pynq/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "pynq"
 BBFILE_PATTERN_pynq = "^${LAYERDIR}/"
 BBFILE_PRIORITY_pynq = "6"
 
-LAYERSERIES_COMPAT_pynq = "zeus"
+LAYERSERIES_COMPAT_pynq = "honister"
