--- a/sdbuild/ubuntu/jammy/aarch64/config
+++ b/sdbuild/ubuntu/jammy/aarch64/config
@@ -1,4 +1,4 @@
 STAGE2_PACKAGES_aarch64 := gcc-mb udev libsds python_packages_jammy jupyter
 STAGE2_PACKAGES_aarch64 += sigrok
 STAGE2_PACKAGES_aarch64 += bootpy
-STAGE3_PACKAGES_aarch64 := pynq x11 resizefs
+STAGE3_PACKAGES_aarch64 := xrt pynq x11 resizefs
