--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest pyfakefs==4.5.6 pytest-cov pytest-asyncio codecov
         # Install required dependencies for pynq since we import it in setup.py
-        pip install numpy cffi
+        pip install numpy cffi ipython
+        # Install PYNQ-Utils and PYNQ-Metadata
+        pip install git+https://github.com/Xilinx/PYNQ-Metadata
+        pip install git+https://github.com/Xilinx/PYNQ-Utils
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
